--- a/views/pasien/index.html
+++ b/views/pasien/index.html
@@ -14,6 +14,7 @@
     
     <div class="container mt-5">
       <h3>Data Pasien</h3>
+      <a href="/pasien/add" class="btn btn-sm btn-primary">Tambah Data</a>
       
       <table class="table table-sriped table-hover">
         <thead>
