--- a/views/pasien/add.html
+++ b/views/pasien/add.html
@@ -9,12 +9,26 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
     <title>Golang CRUD</title>
+
+    <style>
+      .container {
+        max-width: 550px;
+      }
+    </style>
+
   </head>
   <body>
     
     <div class="container mt-5">
       <h3>Tambah Data Pasien</h3>
       <a href="/pasien" class="btn btn-sm btn-primary">Lihat Data</a>
+      <hr/>
+
+      {{ if .pesan }}
+        <div class="alert alert-success">
+          {{ .pesan}}
+        </div>
+      {{ end }}
       
       <form action="/pasien/add" method="post">
         <div class="form-group">
@@ -49,6 +63,12 @@
           <label for="">No.HP</label>
           <input type="text" name="no_hp" class="form-control">
         </div>
+
+        <div class="form-group">
+          <button class="btn btn-primary btn-block" type="submit">SIMPAN</button>
+        </div>
+
+
       </form>
 
     </div>
