--- a/views/pasien/add.html
+++ b/views/pasien/add.html
@@ -33,35 +33,56 @@
       <form action="/pasien/add" method="post">
         <div class="form-group">
           <label for="">Nama Lengkap</label>
-          <input type="text" name="nama_lengkap" class="form-control">
+          <input type="text" name="nama_lengkap" class="form-control {{ if .validation.NamaLengkap }} is-invalid {{ end }}">
+          <div class="invalid-feedback">
+            {{ .validation.NamaLengkap }}
+          </div>
         </div>
         <div class="form-group">
           <label for="">NIK</label>
-          <input type="text" name="nik" class="form-control">
+          <input type="text" name="nik" class="form-control {{ if .validation.NIK }} is-invalid {{ end }}">
+          <div class="invalid-feedback">
+            {{ .validation.NIK}}
+          </div>
         </div>
         <div class="form-group">
           <label for="">Jenis Kelamin</label>
-          <select name="jenis_kelamin" class="form-control">
+          <select name="jenis_kelamin" class="form-control {{ if .validation.JenisKelamin }} is-invalid {{ end }}">
             <option value="">Pilih Jenis Kelamin</option>
             <option value="1">Laki-laki</option>
             <option value="2">Perempuan</option>
           </select>
+          <div class="invalid-feedback">
+            {{ .validation.JenisKelamin }}
+          </div>
         </div>
         <div class="form-group">
           <label for="">Tempat Lahir</label>
-          <input type="text" name="tempat_lahir" class="form-control">
+          <input type="text" name="tempat_lahir" class="form-control {{ if .validation.TempatLahir }} is-invalid {{ end }}">
+          <div class="invalid-feedback">
+            {{ .validation.TempatLahir }}
+          </div>
         </div>
         <div class="form-group">
           <label for="">Tanggal Lahir</label>
-          <input type="date" name="tanggal_lahir" class="form-control">
+          <input type="date" name="tanggal_lahir" class="form-control {{ if .validation.TanggalLahir }} is-invalid {{ end }}">
+          <div class="invalid-feedback">
+            {{ .validation.TanggalLahir }}
+          </div>
         </div>
         <div class="form-group">
           <label for="">Alamat</label>
-          <input type="text" name="alamat" class="form-control">
+          <input type="text" name="alamat" class="form-control {{ if .validation.Alamat }} is-invalid {{ end }}">
+          <div class="invalid-feedback">
+            {{ .validation.Alamat }}
+          </div>
         </div>
         <div class="form-group">
           <label for="">No.HP</label>
-          <input type="text" name="no_hp" class="form-control">
+          <input type="text" name="no_hp" class="form-control {{ if .validation.NoHp }} is-invalid {{ end }}">
+          <div class="invalid-feedback">
+            {{ .validation.NoHp}}
+          </div>
         </div>
 
         <div class="form-group">
