--- a/views/pasien/add.html
+++ b/views/pasien/add.html
@@ -1,98 +1,101 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
-    <title>Golang CRUD</title>
+  <title>Golang CRUD</title>
 
-    <style>
-      .container {
-        max-width: 650px;
-      }
-    </style>
+  <style>
+    .container {
+      max-width: 650px;
+    }
+  </style>
 
-  </head>
-  <body>
-    
-    <div class="container mt-5">
-      <h3>Tambah Data Pasien</h3>
-      <a href="/pasien" class="btn btn-sm btn-primary">Lihat Data</a>
-      <hr/>
+</head>
+<body>
 
-      {{ if .pesan }}
-        <div class="alert alert-success">
-          {{ .pesan}}
+  <div class="container mt-5">
+    <h3>Tambah Data Pasien</h3>
+    <a href="/pasien" class="btn btn-sm btn-primary">Lihat Data</a>
+    <hr/>
+
+    {{ if .pesan }}
+      <div class="alert alert-success">
+        {{ .pesan }}
+      </div>
+    {{ end }}
+
+    {{ if .error }}
+      <div class="alert alert-danger">
+        {{ .error }}
+      </div>
+    {{ end }}
+
+    <form action="/pasien/add" method="post">
+      <div class="form-group">
+        <label for="nama_lengkap">Nama Lengkap</label>
+        <input type="text" name="nama_lengkap" class="form-control {{ if .validation.NamaLengkap }}is-invalid{{ end }}" value="{{ if .pasien.NamaLengkap }}{{ .pasien.NamaLengkap }}{{ end }}">
+        <div class="invalid-feedback">
+          {{ .validation.NamaLengkap }}
         </div>
-      {{ end }}
-      
-      <form action="/pasien/add" method="post">
-        <div class="form-group">
-          <label for="">Nama Lengkap</label>
-          <input type="text" name="nama_lengkap" class="form-control {{ if .validation.NamaLengkap }} is-invalid {{ end }}">
-          <div class="invalid-feedback">
-            {{ .validation.NamaLengkap }}
-          </div>
+      </div>
+      <div class="form-group">
+        <label for="nik">NIK</label>
+        <input type="text" name="nik" class="form-control {{ if .validation.NIK }}is-invalid{{ end }}" value="{{ if .pasien.NIK }}{{ .pasien.NIK }}{{ end }}">
+        <div class="invalid-feedback">
+          {{ .validation.NIK }}
         </div>
-        <div class="form-group">
-          <label for="">NIK</label>
-          <input type="text" name="nik" class="form-control {{ if .validation.NIK }} is-invalid {{ end }}">
-          <div class="invalid-feedback">
-            {{ .validation.NIK}}
-          </div>
+      </div>
+      <div class="form-group">
+        <label for="jenis_kelamin">Jenis Kelamin</label>
+        <select name="jenis_kelamin" class="form-control {{ if .validation.JenisKelamin }}is-invalid{{ end }}">
+          <option value="">Pilih Jenis Kelamin</option>
+          <option value="1" {{ if eq .pasien.JenisKelamin "1" }}selected{{ end }}>Laki-laki</option>
+          <option value="2" {{ if eq .pasien.JenisKelamin "2" }}selected{{ end }}>Perempuan</option>
+        </select>
+        <div class="invalid-feedback">
+          {{ .validation.JenisKelamin }}
         </div>
-        <div class="form-group">
-          <label for="">Jenis Kelamin</label>
-          <select name="jenis_kelamin" class="form-control {{ if .validation.JenisKelamin }} is-invalid {{ end }}">
-            <option value="">Pilih Jenis Kelamin</option>
-            <option value="1">Laki-laki</option>
-            <option value="2">Perempuan</option>
-          </select>
-          <div class="invalid-feedback">
-            {{ .validation.JenisKelamin }}
-          </div>
+      </div>
+      <div class="form-group">
+        <label for="tempat_lahir">Tempat Lahir</label>
+        <input type="text" name="tempat_lahir" class="form-control {{ if .validation.TempatLahir }}is-invalid{{ end }}" value="{{ if .pasien.TempatLahir }}{{ .pasien.TempatLahir }}{{ end }}">
+        <div class="invalid-feedback">
+          {{ .validation.TempatLahir }}
         </div>
-        <div class="form-group">
-          <label for="">Tempat Lahir</label>
-          <input type="text" name="tempat_lahir" class="form-control {{ if .validation.TempatLahir }} is-invalid {{ end }}">
-          <div class="invalid-feedback">
-            {{ .validation.TempatLahir }}
-          </div>
+      </div>
+      <div class="form-group">
+        <label for="tanggal_lahir">Tanggal Lahir</label>
+        <input type="date" name="tanggal_lahir" class="form-control {{ if .validation.TanggalLahir }}is-invalid{{ end }}" value="{{ if .pasien.TanggalLahir }}{{ .pasien.TanggalLahir }}{{ end }}">
+        <div class="invalid-feedback">
+          {{ .validation.TanggalLahir }}
         </div>
-        <div class="form-group">
-          <label for="">Tanggal Lahir</label>
-          <input type="date" name="tanggal_lahir" class="form-control {{ if .validation.TanggalLahir }} is-invalid {{ end }}">
-          <div class="invalid-feedback">
-            {{ .validation.TanggalLahir }}
-          </div>
+      </div>
+      <div class="form-group">
+        <label for="alamat">Alamat</label>
+        <input type="text" name="alamat" class="form-control {{ if .validation.Alamat }}is-invalid{{ end }}" value="{{ if .pasien.Alamat }}{{ .pasien.Alamat }}{{ end }}">
+        <div class="invalid-feedback">
+          {{ .validation.Alamat }}
         </div>
-        <div class="form-group">
-          <label for="">Alamat</label>
-          <input type="text" name="alamat" class="form-control {{ if .validation.Alamat }} is-invalid {{ end }}">
-          <div class="invalid-feedback">
-            {{ .validation.Alamat }}
-          </div>
+      </div>
+      <div class="form-group">
+        <label for="no_hp">No. HP</label>
+        <input type="text" name="no_hp" class="form-control {{ if .validation.NoHp }}is-invalid{{ end }}" value="{{ if .pasien.NoHp }}{{ .pasien.NoHp }}{{ end }}">
+        <div class="invalid-feedback">
+          {{ .validation.NoHp }}
         </div>
-        <div class="form-group">
-          <label for="">No.HP</label>
-          <input type="text" name="no_hp" class="form-control {{ if .validation.NoHp }} is-invalid {{ end }}">
-          <div class="invalid-feedback">
-            {{ .validation.NoHp}}
-          </div>
-        </div>
+      </div>
+      <div class="form-group">
+        <button class="btn btn-primary btn-block" type="submit">SIMPAN</button>
+      </div>
+    </form>
 
-        <div class="form-group">
-          <button class="btn btn-primary btn-block" type="submit">SIMPAN</button>
-        </div>
+  </div>
 
-
-      </form>
-
-    </div>
-
-  </body>
+</body>
 </html>
